WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171066
Fix indentation in AVKitSPI.h
https://bugs.webkit.org/show_bug.cgi?id=171066
Summary
Fix indentation in AVKitSPI.h
Andy Estes
Reported
2017-04-20 11:51:26 PDT
Fix indentation in AVKitSPI.h
Attachments
Patch
(2.47 KB, patch)
2017-04-20 11:52 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2017-04-20 11:52:15 PDT
Created
attachment 307605
[details]
Patch
Build Bot
Comment 2
2017-04-20 11:54:33 PDT
Attachment 307605
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/spi/cocoa/AVKitSPI.h:210: Should not have spaces around = in property attributes. [whitespace/property] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 3
2017-04-20 12:39:20 PDT
Comment on
attachment 307605
[details]
Patch Clearing flags on attachment: 307605 Committed
r215570
: <
http://trac.webkit.org/changeset/215570
>
WebKit Commit Bot
Comment 4
2017-04-20 12:39:21 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug