Fix indentation in AVKitSPI.h https://bugs.webkit.org/show_bug.cgi?id=171066

Reviewed by Jer Noble.

* platform/spi/cocoa/AVKitSPI.h:


Canonical link: https://commits.webkit.org/187975@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215570 268f45cc-cd09-0410-ab3c-d52691b4dbfc